--- a/2nd/contact.html
+++ b/2nd/contact.html
@@ -6,6 +6,6 @@
     <title>Contact Me</title>
 </head>
 <body>
-    contact me on this 9173410585.
+    contact me on this 9173410585
 </body>
 </html>
