--- a/3photo.html
+++ b/3photo.html
@@ -68,7 +68,7 @@
 
     <figure>
         <img src="https://picsum.photos/250/150?random=9" alt="Dog" title="Man’s best friend" width="250">
-        <figcaption>Man’s best friend.</figcaption>
+        <figcaption>Mans best friend.</figcaption>
     </figure>
 
     <figure>
