--- a/4format.html
+++ b/4format.html
@@ -45,7 +45,7 @@ fiber connections. Computers now fit in our
 <small>pockets as smartphones</small>.
 
 <h2>Computer Example</h2> 
-To display text on a webpage, you can use:
+To display text on a webpage, you can use
 <pre>
 <code>
 <html>
