--- a/3photo.html
+++ b/3photo.html
@@ -52,27 +52,27 @@
 
     <h2 id="animals">Animals</h2>
     <figure>
-        <img src="https://picsum.photos/250/150?random=6" alt="Lion" title="King of the Jungle" width="250">
+        <img src="https://www.pexels.com/photo/majestic-african-lion-close-up-in-kenya-33729835/" alt="Lion" title="King of the Jungle" width="250">
         <figcaption>King of the Jungle.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=7" alt="Elephant" title="Gentle giant in the wild" width="250">
+        <img src="https://www.pexels.com/photo/close-up-photo-of-gorilla-913652/" alt="Elephant" title="Gentle giant in the wild" width="250">
         <figcaption>Gentle giant in the wild.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=8" alt="Peacock" title="India’s national bird" width="250">
+        <img src="https://www.pexels.com/photo/peacock-perched-on-tree-branch-3550969/" alt="Peacock" title="India’s national bird" width="250">
         <figcaption>India’s national bird.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=9" alt="Dog" title="Man’s best friend" width="250">
+        <img src="https://www.pexels.com/photo/two-yellow-labrador-retriever-puppies-1108099/" alt="Dog" title="Man’s best friend" width="250">
         <figcaption>Mans best friend.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=10" alt="Dolphin" title="Smartest sea creature" width="250">
+        <img src="https://www.pexels.com/photo/cute-dolphine-underwater-64219/" alt="Dolphin" title="Smartest sea creature" width="250">
         <figcaption>Smartest sea creature.</figcaption>
     </figure>
 
@@ -80,27 +80,27 @@
 
     <h2 id="monuments">Monuments</h2>
     <figure>
-        <img src="https://picsum.photos/250/150?random=11" alt="Taj Mahal" title="Symbol of love in Agra" width="250">
+        <img src="https://www.pexels.com/photo/taj-mahal-and-the-four-minarets-1603650/" alt="Taj Mahal" title="Symbol of love in Agra" width="250">
         <figcaption>Symbol of love in Agra.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=12" alt="Qutub Minar" title="Tallest brick minaret" width="250">
+        <img src="https://www.pexels.com/photo/qutub-minar-tower-in-india-18291210/" alt="Qutub Minar" title="Tallest brick minaret" width="250">
         <figcaption>Tallest brick minaret.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=13" alt="India Gate" title="War memorial in Delhi" width="250">
+        <img src="https://www.pexels.com/photo/brown-concrete-india-gate-789750/" alt="India Gate" title="War memorial in Delhi" width="250">
         <figcaption>War memorial in Delhi.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=14" alt="Statue of Unity" title="Tallest statue in the world" width="250">
+        <img src="https://www.pexels.com/photo/foot-of-giant-stone-sculpture-11938693/" alt="Statue of Unity" title="Tallest statue in the world" width="250">
         <figcaption>Tallest statue in the world.</figcaption>
     </figure>
 
     <figure>
-        <img src="https://picsum.photos/250/150?random=15" alt="Gateway of India" title="Iconic Mumbai landmark" width="250">
+        <img src="https://www.pexels.com/photo/tourists-at-historic-landmark-15528027/" alt="Gateway of India" title="Iconic Mumbai landmark" width="250">
         <figcaption>Iconic Mumbai landmark.</figcaption>
     </figure>
 
